samples/_failures_safe/1761316420_3f2f39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7edced4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e7edced4.c:162:13: error: expected expression at end of input
  162 |             advance(
      |             ^~~~~~~
./samples/SAFE/__tmp_e7edced4.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7edced4.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7edced4.c:162:13: error: expected declaration or statement at end of input
